<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_metodo"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_ingresar" />

    <EditText
        android:id="@+id/mensaje"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cifrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_cifrar"/>

    <Button
        android:id="@+id/descifrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_descifrar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_resultado" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_gravity="center"
        android:textStyle="bold"/>
</LinearLayout>
